Menu déroulant smartphone

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,12 +13,15 @@
       <!-- Corps de la page -->
       <!-- HEADER -->
       <header>
-         <nav class="navigation">
+         <nav class="navbar">
+            <li>
+                <a href="#"><i class="fa fa-solid fa-list"></i></a>
             <ul>
                <li><a href="#competences">Mes compétences</a></li>
                <li><a href="#portfolio">Mes projets</a></li>
                <li><a href="#">Contactez moi</a></li>
             </ul>
+        </li>
          </nav>
       </header>
       <!-- HEADER -->
